@@ -3,7 +3,7 @@
 #
 # Magisk Module Template Install Script
 # by topjohnwu
-# 
+#
 ##########################################################################################
 
 # Detect whether in boot mode
@@ -24,8 +24,12 @@ MAGISKBIN=/data/magisk
 # Default permissions
 umask 022
 
+# Initial cleanup
+rm -rf $TMPDIR 2>/dev/null
+mkdir -p $INSTALLER
+
 ##########################################################################################
-# Flashable update-binary preparation
+# Environment
 ##########################################################################################
 
 OUTFD=$2
@@ -34,7 +38,7 @@ ZIP=$3
 ui_print() {
   if $BOOTMODE; then
     echo "$1"
-  else 
+  else
     echo -n -e "ui_print $1\n" >> /proc/self/fd/$OUTFD
     echo -n -e "ui_print\n" >> /proc/self/fd/$OUTFD
   fi
@@ -43,34 +47,50 @@ ui_print() {
 require_new_magisk() {
   ui_print "***********************************"
   ui_print "! $MAGISKBIN isn't setup properly!"
-  ui_print "! Please install Magisk v13.1+!"
+  ui_print "! Please install Magisk v14.0+!"
   ui_print "***********************************"
   exit 1
 }
 
-# Mount /data to access MAGISKBIN
+ui_print "- Mounting /system, /vendor, /data, /cache"
+mount -o ro /system 2>/dev/null
+mount -o ro /vendor 2>/dev/null
 mount /data 2>/dev/null
+mount /cache 2>/dev/null
 
-# MAGISKBIN must exist, binaries and utility functions are placed there
-[ -d $MAGISKBIN -a -f $MAGISKBIN/magisk -a -f $MAGISKBIN/util_functions.sh ] || require_new_magisk
-
+# Utility functions must exist
+[ -f $MAGISKBIN/util_functions.sh ] || require_new_magisk
 # Load utility fuctions
 . $MAGISKBIN/util_functions.sh
-[ ! -z $SCRIPT_VERSION -a $SCRIPT_VERSION -ge 1310 ] || require_new_magisk
 get_outfd
 
-rm -rf $TMPDIR 2>/dev/null
-mkdir -p $INSTALLER
-unzip -o "$ZIP" config.sh -d $INSTALLER 2>/dev/null
+$BOOTMODE && ! is_mounted /magisk && abort "! Magisk is not activated!"
+[ ! -f /system/build.prop ] && abort "! /system could not be mounted!"
+
+# Detect version and architecture
+api_level_arch_detect
+
+# You can get the Android API version from $API, the CPU architecture from $ARCH
+# Useful if you are creating Android version / platform dependent mods
+
+# We need busybox/binaries to be setup
+$BOOTMODE && boot_actions || recovery_actions
 
 ##########################################################################################
-# Prepare
+# Preparation
 ##########################################################################################
+
+# Extract common files
+unzip -o "$ZIP" module.prop config.sh 'common/*' -d $INSTALLER 2>/dev/null
 
 [ ! -f $INSTALLER/config.sh ] && abort "! Unable to extract zip file!"
-
+# Load configurations
 . $INSTALLER/config.sh
 
+# Check the min magisk version
+MIN_VER=`grep_prop template $INSTALLER/module.prop`
+[ ! -z $MAGISK_VER_CODE -a $MAGISK_VER_CODE -ge $MIN_VER ] || require_new_magisk
+MODID=`grep_prop id $INSTALLER/module.prop`
 MODPATH=$MOUNTPATH/$MODID
 
 # Print mod name
@@ -81,35 +101,14 @@ ui_print "******************************"
 ui_print "Powered by Magisk (@topjohnwu)"
 ui_print "******************************"
 
-ui_print "- Mounting /system, /vendor, /data, /cache"
-mount -o ro /system 2>/dev/null
-mount -o ro /vendor 2>/dev/null
-mount /data 2>/dev/null
-mount /cache 2>/dev/null
-
-[ ! -f /data/magisk.img ] && abort "! Magisk is not installed"
-$BOOTMODE && ! is_mounted /magisk && abort "! Magisk is not activated!"
-[ ! -f /system/build.prop ] && abort "! /system could not be mounted!"
-
-# Detect version and architecture
-api_level_arch_detect
-
-# You can get the Android API version from $API, the CPU architecture from $ARCH
-# Useful if you are creating Android version / platform dependent mods
-
 ##########################################################################################
 # Install
 ##########################################################################################
 
-ui_print "- Extracting module files"
-unzip -o "$ZIP" -d $INSTALLER 2>/dev/null
-request_size_check $INSTALLER
-
-# We're going to use magisk binary now, require some recovery fixes
-$BOOTMODE || recovery_actions
+request_zip_size_check "$ZIP"
 
 if [ -f "$IMG" ]; then
-  ui_print "- $IMG detected!"
+  ui_print "- Found $IMG"
   image_size_check $IMG
   if [ "$reqSizeM" -gt "$curFreeM" ]; then
     newSizeM=$(((reqSizeM + curUsedM) / 32 * 32 + 64))
@@ -124,15 +123,14 @@ fi
 
 ui_print "- Mounting $IMG to $MOUNTPATH"
 MAGISKLOOP=`$MAGISKBIN/magisk --mountimg $IMG $MOUNTPATH`
-is_mounted $MOUNTPATH || abort"! $IMG mount failed..."
+is_mounted $MOUNTPATH || abort "! $IMG mount failed..."
 
 # Create mod paths
 rm -rf $MODPATH 2>/dev/null
 mkdir -p $MODPATH
 
-# Copy files
-ui_print "- Copying files"
-mv $INSTALLER/system $MODPATH/system
+ui_print "- Extracting module files"
+unzip -o "$ZIP" 'system/*' -d $MODPATH 2>/dev/null
 
 # Handle replace folders
 for TARGET in $REPLACE; do
@@ -178,6 +176,7 @@ if [ $curSizeM -gt $newSizeM ]; then
 fi
 
 $BOOTMODE || recovery_cleanup
+rm -rf $TMPDIR
 
 ui_print "- Done"
 exit 0
