@@ -1,7 +1,7 @@
 id=dozegms
 name=Enable Doze for GMS Magisk Module
-version=v4
-versionCode=4
+version=v5
+versionCode=5
 author=otonieru @ xda-developers
 description=Enable Dozing for Google Play Services without tampering with System
-template=4
+template=1400
