@@ -6,3 +6,5 @@ v3
     - Update Template to v3
 v4
     - Update Template to v4 for Magisk v13
+v5
+	- Update Template to v1400 for Magisk v14 - PLEASE UPDATE YOUR MAGISK VERSION
